# test-select-event-loop

./: Makefile  README.md  pyproject.toml
event_loop/: client.py  event_loop.py  server.py
